$Id: History,v 1.9 2002-11-22 17:48:10 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Test 33 History file
                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 22th M. Dressel 
  changed geometry for scoring. Cells must not coinside with
  wolrd boundary since tracks would be killed before
  scoring is called in the case a track exits a cell into
  "out of world".


Nov, 20th 2002 M.Dressel  (test33-V04-01-02)
- some code cleanup
- added some comments to the header files
- removed some old files

Nov, 4th 2002 M.Dressel  (test33-V04-01-01)
- remove G4std:: where it does not belong to
- replace str() functions

Oct 29, 2002 - M.Dressel  (test33-V04-01-00)
- first implementation

Oct 29, 2002 - M.Dressel
- first implementation

Oct 29, 2002 - M.Dressel
- added DISCLAIMERs

Oct 25, 2002 - G.Cosmo
- Created.